tests/lean/have.lean.expected.out
have.lean:4:0: error: expected term
have.lean:2:18-2:19: error: don't know how to synthesize placeholder
context:
⊢ False
have.lean:6:15-6:16: error: synthesized type class instance is not definitionally equal to expression inferred by typing rules, synthesized
  instOfNatNat 6
inferred
  { ofNat := 3 }
